tests/NormalTests/paczka1/fuzzy1/88573166.err
Error in line 1: H38FaB S600 26,9
Error in line 3: 5cvHB S440 23,5
Error in line 26: RuFE7 S600 14,5
Error in line 28: 6BTjQ S440 85,4
Error in line 36: RuFE7 A498 148,0
